# pycnysr

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE.md  README.md  config.dist.yaml  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml
pycnysr/: __init__.py  pycnysr.py
tests/: test_config.py
